# fibio-http

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md
fibio-http/: fibio_http.1  main.cpp
fibio-http.xcodeproj/: project.pbxproj
fibio-http.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
fibio-http.xcodeproj/xcuserdata/chenxu.xcuserdatad/xcschemes/: fibio-http.xcscheme  xcschememanagement.plist
include/fibio/http/client/: client.hpp  request.hpp  response.hpp
include/fibio/http/common/: common_types.hpp  request.hpp  response.hpp
include/fibio/http/server/: request.hpp  response.hpp  routing.hpp  server.hpp
src/: CMakeLists.txt
src/http/: client.cpp  common.cpp  routing.cpp  server.cpp  url_parser.cpp  url_parser.hpp
test/: CMakeLists.txt  test_http_client.cpp  test_http_server.cpp
